# obsidian-cli-rs

./: Cargo.toml  README.md  cspell.config.yaml
.github/workflows/: build.yml
config/: cspell-obsidian-cli-dictionary.txt
docs/: backlog.md
src/: main.rs  utils.rs
src/cmd/: backup.rs  open.rs
