[package]
name = "obsidian-cli"
version = "0.1.1"
edition = "2021"
authors = [
    "kootsZhin <kootsZhin@proton.me>",
    "Joel Van Eenwyk <joel.vaneenwyk@gmail.com>",
]
description = "A blazing fast & lightweight CLI tool for interacting with the Obsidian vaults"
license = "MIT"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
dialoguer = "0.11.0"
eyre = "0.6.12"
home = "0.5.9"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.59"
